<resources>
    <string name="app_name">See The World</string>

    <string name="zhihu_daily">Zhihu Daily</string>
    <string name="guokr_handpick">Guokr Handpick</string>
    <string name="douban_moment">Douban Moment</string>

    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
    <string name="timeline">Timeline</string>

    <!-- general -->
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="something_wrong">Something wrong…</string>
    <!-- general end -->

    <!-- timeline -->
    <string name="fab_description">Select a specific date</string>
    <string name="empty_content">Oops, nothing here…</string>
    <!-- timeline end -->

    <!-- favorites -->
    <string name="no_favorites">NO FAVORITES</string>
    <!-- favorites end -->

    <!--info fragment-->
    <string name="settings">Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="no_picture_mode">No Image Mode</string>
    <string name="no_image_mode_desc">Images will not be loaded when articles is being shown</string>
    <string name="in_app_browser">In-App Browser</string>
    <string name="in_app_browser_desc">Open links with Chrome Custom Tabs</string>
    <string name="night_mode">Night Mode</string>
    <string name="time_of_saving_articles">Time of Saving Articles</string>
    <string name="clear_image_cache">Clear Image Cache</string>
    <string name="clear_image_cache_successfully">Cache successfully cleared</string>
    <string name="about_us">About Us</string>
    <string name="version">Version:V3.3.0</string>
    <string name="rate">Rate</string>
    <string name="rate_desc">If you like the Paper Plane app, please do rate it</string>
    <string name="author">Authors</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_desc">https://github.com/TonnyL/PaperPlane/graphs/contributors</string>
    <string name="follow_me_on_github">Follow Me on GitHub</string>
    <string name="follow_me_on_github_desc">https://github.com/TonnyL</string>
    <string name="follow_me_on_zhihu">Follow Me on ZhiHu</string>
    <string name="follow_me_on_zhihu_desc">https://www.zhihu.com/people/lizhaotailang</string>
    <string name="support">Support</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_desc">https://github.com/TonnyL/PaperPlane</string>
    <string name="feedback">Report Bugs / Advices</string>
    <string name="feedback_desc">Help me to improve the Paper Plane app</string>
    <string name="sendto">mailto:marktonymengyi@gmail.com</string>
    <string name="mail_topic">PaperPlane Feedback / Advice</string>
    <string name="device_model">Device Version:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="no_mail_app">No email app found</string>
    <string name="coffee">Buy Me A Cup of Coffee</string>
    <string name="coffee_description">If you think I deserve to get paid for my work, buy me a cup of coffee for support</string>
    <string name="donate">Donate Developer</string>
    <string name="donate_content">Alipay account will be copied to clipboard.Launch Alipay and paste it to finish donating.Thanks for support!</string>
    <string name="donate_account">marktonymengyi@gmail.com</string>
    <string name="open_source_licenses">Open Source Licenses</string>

    <string-array name="time_of_saving_articles">
        <item>1 day</item>
        <item>5 days</item>
        <item>15 days</item>
        <item>30 days</item>
    </string-array>

    <string-array name="time_of_saving_articles_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- info fragment end -->

    <!-- article details -->
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_open_in_browser">Open with system browser</string>
    <string name="action_share">Share</string>
    <string name="share_to">Share to</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_error">Share failed</string>
    <!-- article details end -->

    <!-- others -->
    <string name="no_browser_found">No browser found</string>
    <string name="image_view_cover_desc">Cover</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="feel_lucky">feel_lucky</string>
    <string name="loading_more">Loading more...</string>
    <string name="share">Share</string>
    <string name="menu">menu</string>
    <string name="action_copy_text">Copy Text</string>
    <string name="action_share_as_text">Share as Text</string>
    <string name="cancel_favorite">Cancel Favorite</string>
    <string name="share_extra">shared from NewsApp</string>
    <string name="text_copied">Text Copied</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <!-- others end -->

    <string name="auto_change_theme">Auto Change Theme</string>
    <string name="auto_change_theme_summary">Auto Change Day/Night Theme by Time</string>
    <string name="glide_cache_clear_done">Glide Cache Clear Done</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="auto_theme_day_time">Time of Day Theme</string>
    <string name="auto_theme_night_time">Time of Night Theme</string>

    <!-- infos -->
    <string name="name_fly">李飞燕    S170201002</string>
    <string name="name_lei">雷爽    S170201001</string>
    <string name="name_zhu">朱月新    S170201005</string>
    <string name="our_school">计算机科学与技术学院</string>
    <string name="cache_clear_done">Cache Clear Done</string>
    <!-- infos end -->
</resources>
