<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:enabled="true">

        <item
            android:id="@+id/nav_home"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/favorites" />
    </group>

    <group android:enabled="true"
        android:checkableBehavior="none">
        <item
            android:id="@+id/change_theme"
            android:enabled="true"
            android:icon="@drawable/ic_brightness_medium_black_24px"
            android:title="Change Theme"/>

        <item android:id="@+id/settings"
            android:enabled="true"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_about"
            android:enabled="true"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about" />
    </group>
</menu>